# measure-text-width

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json  tsconfig.json  webpack.config.js
src/: bootstrap.ts  index.html  index.ts  lib.rs  typed.ts  utils.rs  wasm-worker.ts  worker.ts
src/wasm/: LICENSE_MIT
src/wasm/src/: lib.rs
