[package]
name = "wasm"
version = "0.1.0"
authors = ["adam <adam.zmenak@d1g1t.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
serde = "^1.0.59"
serde_derive = "^1.0.59"
hashbrown = "0.6"
unidecode = "0.3.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  "console",
]

[dependencies.wasm-bindgen]
version = "^0.2"
features = ["serde-serialize"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = 3
